--- a/static/admin/translations.html
+++ b/static/admin/translations.html
@@ -1,3 +1,8 @@
+<!--
+Copyright (c) 2013 ZionSoft. All rights reserved.
+Use of this source code is governed by a BSD-style license
+that can be found in the LICENSE file.
+-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
